* src/java/org/archive/crawler/util/DiskFPMergeUriUniqFilter.java     Looks like this was committed uncompilable. this.next is a long.     Can't do a Long.valueOf on long.  Changed to new Long(this.next).